--- a/funny_app/pom.xml
+++ b/funny_app/pom.xml
@@ -13,7 +13,6 @@
     
     
     <dependencies>
-        
         <dependency>
             <groupId>com.funnyai</groupId>
             <artifactId>mv_common_newjava</artifactId>
@@ -25,38 +24,67 @@
             <artifactId>mv_common2</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-                <!-- https://mvnrepository.com/artifact/rhino/js -->
+        
+        <!-- https://mvnrepository.com/artifact/rhino/js -->
         <dependency>
             <groupId>rhino</groupId>
             <artifactId>js</artifactId>
             <version>1.7R2</version>
         </dependency>
 
-        
-        <dependency>
-            <groupId>com.funnyai</groupId>
-            <artifactId>mv_common_language</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        
-        
-        <dependency>
-            <groupId>org.jsoup</groupId>
-            <artifactId>jsoup</artifactId>
-            <version>1.8.3</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-codec</groupId>
-            <artifactId>commons-codec</artifactId>
-            <version>1.10</version>
-        </dependency>
-        
-        <!-- https://mvnrepository.com/artifact/dom4j/dom4j -->
-        <dependency>
-            <groupId>dom4j</groupId>
-            <artifactId>dom4j</artifactId>
-            <version>1.6.1</version>
-        </dependency>
-        
     </dependencies>
+    
+    
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>2.3</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <!--${project.build.directory} class的输出目录不做设置的话默认代表项目根目录的target目录；
+                                也可以使用“自定义文件夹/自定义文件夹 例如：a/b”，也可以使用绝对路径如：“D:\test” -->
+                            <outputDirectory>E:\happyli\Jar\funny_app</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+                <configuration>
+                    <filters>
+                        <filter>
+                            <artifact>*:*</artifact>
+                            <excludes>
+                                <exclude>META-INF/*.SF</exclude>
+                                <exclude>META-INF/*.DSA</exclude>
+                                <exclude>META-INF/*.RSA</exclude>
+                            </excludes>
+                        </filter>
+                    </filters>
+                    <finalName>funny_app</finalName>
+                    <transformers>
+                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                          <mainClass>funnyai.JavaMain</mainClass>
+                        </transformer>
+                    </transformers>
+
+                </configuration>
+            </plugin>
+
+        </plugins>
+
+
+    </build>
 </project>
