--- a/funny_app/pom.xml
+++ b/funny_app/pom.xml
@@ -25,6 +25,13 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         
+        
+        <dependency>
+            <groupId>com.funnyai</groupId>
+            <artifactId>mv_common_language</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        
         <!-- https://mvnrepository.com/artifact/rhino/js -->
         <dependency>
             <groupId>rhino</groupId>
