--- a/funny_app/pom.xml
+++ b/funny_app/pom.xml
@@ -39,6 +39,26 @@
             <version>1.7R2</version>
         </dependency>
 
+        <dependency>
+                <groupId>org.quartz-scheduler</groupId>
+                <artifactId>quartz</artifactId>
+                <version>2.3.0</version>
+        </dependency>
+        
+        
+        <dependency>
+           <groupId>com.jcraft</groupId>
+           <artifactId>jsch</artifactId>
+           <version>0.1.55</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcpkix-jdk15on</artifactId>
+            <version>1.50</version>
+        </dependency>
+
+
     </dependencies>
     
     
