--- a/funny_app/pom.xml
+++ b/funny_app/pom.xml
@@ -69,7 +69,18 @@
             <version>1.50</version>
         </dependency>
 
-
+        <dependency>
+          <groupId>com.github.haifengl</groupId>
+          <artifactId>smile-core</artifactId>
+          <version>1.5.3</version>
+        </dependency>
+        
+        
+        <dependency>
+            <groupId>com.funnyai</groupId>
+            <artifactId>mv_common_smile_ml</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     
     
@@ -121,25 +132,6 @@
                 </configuration>
             </plugin>
 
-            <plugin>
-                <groupId>com.funnyai</groupId>
-                <artifactId>funny-maven-plugin</artifactId>
-                <version>1.0-SNAPSHOT</version>
-                <configuration>
-                    <prefix>---</prefix>
-                    <upload>E:\happyli\Jar\funny_app\funny_app.jar</upload>
-                </configuration>
-
-                <executions>
-                    <execution>
-                        <id>buildinfo</id>
-                        <phase>process-sources</phase>
-                        <goals>
-                            <goal>buildinfo</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
         </plugins>
 
 
