--- a/funny_app_linux/pom.xml
+++ b/funny_app_linux/pom.xml
@@ -71,6 +71,11 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>com.funnyai</groupId>
+            <artifactId>mv_common_smile_ml</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     
     
